<resources>
    <string name="app_name">ONE PIECE MESSENGER</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_notification_channel_id">MESSENGER_ID_DEFAULT</string>
    <string name="message_denied">You was not allow this app showing notification</string>
    <string name="mesg_permission_prompt">You need accept this permission to see notification showing.</string>
    <string name="error_username">Usernaem must contains at least 3 characters long</string>
    <string name="error_displa_name">Display name cannot be empty</string>
    <string name="error_password">Password mus be contains at least 6 characters</string>
    <string name="error_avatar">You must pick your avatar first</string>
    <string name="error_email">Email cannot be empty or must be correct format</string>
    <string name="error_confirmPwd">Confirm Password mistake</string>
    <string name="message_login_failed">Incorrect User name or Password. Login failed!</string>
    <string name="title_chat">Chat</string>
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="title_call">Voice Call</string>
    <string name="title_phonebook">Phone Book</string>
    <string name="preference_file_key">com.example.minh_messenger_test.PREF_FILE_KEY</string>
    <string name="error_logged_in">Please login to join the chat!</string>
    <string name="title_minh_test">MESSENGER BY MINH</string>
    <string name="des_ba_icon">Application Icon</string>
    <string name="title_profile">Profile</string>
    <string name="title_dark_mode">Dark Mode</string>
    <string name="title_waiting_message">Waiting Message</string>
    <string name="title_repository">Repository</string>
    <string name="title_setting">Settings</string>
    <string name="title_about">About</string>
    <string name="action_logout">Logout</string>
    <string name="action_login">Login</string>
    <string name="chat_edit_text">Type a message</string>
    <string name="desc_item_message">User avatar display</string>
    <string name="Status_act">Online</string>
    <string name="text_accept_call">Accept</string>
    <string name="text_decline_call">Decline</string>
</resources>