<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/title_profile"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/item_dark_mode"
        android:icon="@drawable/ic_dark_mode"
        android:title="@string/title_dark_mode"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/item_add_friend"
        android:icon="@drawable/ic_add_friend"
        android:title="Add Friend"
        tools:ignore="HardcodedText" />
    <item
        android:id="@+id/item_login"
        android:icon="@drawable/ic_login"
        android:title="@string/title_login"
        app:showAsAction="ifRoom|withText" />
</menu>